syntax = "proto3";

import "google/protobuf/empty.proto";

package greet;

option csharp_namespace = "GreeterService";
// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc JustSayHello(HelloRequest) returns (google.protobuf.Empty);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  int32 number = 2;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
